manifests/harbor_chart/harbor_chart.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
